--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+  height: 768px;
   padding: 2rem;
   text-align: center;
 }
@@ -9,4 +10,5 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  text-align: left;
 }
